Fix header sticking to edges on smaller viewports

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -25,7 +25,7 @@ $menu-button-color: $ezac-dark-blue;
 
   .container {
     @media only screen and (min-width: 800px) {
-      padding: 0;
+      padding: 0 30px;
     }
 
     .wrapper {
